--- a/bio.html
+++ b/bio.html
@@ -11,7 +11,7 @@
     <nav>
         <a href="http://jialeeart.github.io"><img id="signature" src="images/sign jl1.png"></a>
         <div id="navLinks">
-            <a href="#">WORK</a>
+            <a href="http://jialeeart.github.io/work.html">WORK</a>
             <a href="http://jialeeart.github.io/bio.html">BIO</a>
             <a href="http://jialeeart.github.io/contact.html">CONTACT</a>
         </div>
