vertical bar navbar

--- a/bio.html
+++ b/bio.html
@@ -15,7 +15,9 @@
         <a href="http://jialeeart.github.io"><img id="signature" src="images/sign jl1.png"></a>
         <div id="navLinks">
             <a href="http://jialeeart.github.io/work.html">WORK</a>
+            |
             <a href="http://jialeeart.github.io/bio.html">BIO</a>
+            |
             <a href="http://jialeeart.github.io/contact.html">CONTACT</a>
         </div>
     </nav>
@@ -28,7 +30,9 @@
         <h1>Bio</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, at excepturi? Eligendi perferendis eum necessitatibus iste nesciunt animi itaque aperiam repellendus quibusdam reiciendis veritatis aut consequatur voluptatem, dicta debitis quo eius ipsum minus est, distinctio magni similique ullam. Ducimus esse nulla mollitia exercitationem, nobis laboriosam maiores aut rerum placeat, labore quasi quos provident et dolore aspernatur ullam quaerat magni modi.</p>
 
-        <h2>Shows</h2>
+        <h2>Exhibitions</h2>
+        <p>2017 March. "Beautiful Losers" Exhibition at 601 West 26th Street, 15th floor, New York, NY</p>
+        <p>2018 May. "Tales from the Crit" Exhibition at 209 East 23rd Street, New York, NY</p>
       </div>
     </div>
 </body>
