--- a/bio.html
+++ b/bio.html
@@ -35,5 +35,9 @@
         <p>2018 May. "Tales from the Crit" Exhibition at 209 East 23rd Street, New York, NY</p>
       </div>
     </div>
+
+    <bioFooter>
+      <h4>© 2019 Jia Lee</h4>
+    </bioFooter>
 </body>
 </html>
