add bio profile picture

--- a/bio.html
+++ b/bio.html
@@ -24,7 +24,9 @@
 
     <div id="bio">
       <div id="bioPic">
-        <i class="fas fa-user-circle fa-10x"></i>
+        <div id="bioPicCrop">
+          <img src="images/bioPic.jpg">
+        </div>
       </div>
       <div id="bioInfo">
         <h1>Bio</h1>
