--- a/bio.html
+++ b/bio.html
@@ -38,7 +38,7 @@
       </div>
       <div id="bioInfo">
         <h1>Bio</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, at excepturi? Eligendi perferendis eum necessitatibus iste nesciunt animi itaque aperiam repellendus quibusdam reiciendis veritatis aut consequatur voluptatem, dicta debitis quo eius ipsum minus est, distinctio magni similique ullam. Ducimus esse nulla mollitia exercitationem, nobis laboriosam maiores aut rerum placeat, labore quasi quos provident et dolore aspernatur ullam quaerat magni modi.</p>
+        <p>Jia Lee is an illustrator based in New York with a BFA in Illustration from the School of Visual Arts. She was born in South Korea and lived in California for most of her life, and attempts to visualize her personal experiences in her paintings using broad themes of desire, identity, and power. Her main influences include Inka Essenhigh and Lisa Yuskavage.</p>
 
         <h2>Exhibitions</h2>
         <p>2017 March. "Beautiful Losers" Exhibition at 601 West 26th Street, 15th floor, New York, NY</p>
