--- a/bio.html
+++ b/bio.html
@@ -38,7 +38,7 @@
       </div>
       <div id="bioInfo">
         <h1>Bio</h1>
-        <p>Jia Lee is an illustrator based in New York with a BFA in Illustration from the School of Visual Arts. She was born in South Korea and lived in California for most of her life, and attempts to visualize her personal experiences in her paintings using broad themes of desire, identity, and power. Her main influences include Inka Essenhigh and Lisa Yuskavage.</p>
+        <p>Hello, I am an illustrator and Grahpic Designer with a BFA in Illustration from the School of Visual Arts. Stemming from a traditional training in paintings, I am currently broadening my horizons to graphic design and motion design - all the while exploring the style I wish to pursue. My main influences include Inka Essenhigh and Lisa Yuskavage, as well as my Korean heritage.</p>
 
         <h2>Exhibitions</h2>
         <p>2017 March. "Beautiful Losers" Exhibition at 601 West 26th Street, 15th floor, New York, NY</p>
