--- a/bio.html
+++ b/bio.html
@@ -38,7 +38,7 @@
       </div>
       <div id="bioInfo">
         <h1>Bio</h1>
-        <p>Hello, I am an illustrator and Grahpic Designer with a BFA in Illustration from the School of Visual Arts. Stemming from a traditional training in paintings, I am currently broadening my horizons to graphic design and motion design - all the while exploring the style I wish to pursue. My main influences include Inka Essenhigh and Lisa Yuskavage, as well as my Korean heritage.</p>
+        <p>Hello, I am an illustrator and Graphic Designer with a BFA in Illustration from the School of Visual Arts. Stemming from a traditional training in paintings, I am currently broadening my horizons to graphic design and motion design - all the while exploring the style I wish to pursue. My main influences include Inka Essenhigh and Lisa Yuskavage, as well as my Korean heritage.</p>
 
         <h2>Exhibitions</h2>
         <p>2017 March. "Beautiful Losers" Exhibition at 601 West 26th Street, 15th floor, New York, NY</p>
